tests/valid/intrinsics.lang
const my_const: u64 = @sizeof(i32);

extern fn main() void {

}
